--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@revolist/vue-datagrid": "^2.9.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-responsive-dash": "^0.5.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
